# ML-Lab1

./: .gitignore  lab5.ipynb  pyproject.toml
Lab 1/: AmesExplanations.txt  lab1.ipynb
Lab 2/: lab2.ipynb  lab2_bonus.ipynb
Lab 3/: lab3.ipynb  xgb_trial_0.pkl  xgb_trial_25.pkl  xgb_trial_49.pkl
Lab 4/: lab4_bonus.ipynb
Lab 5/: lab5.ipynb
Lab 6/: lab6.ipynb
