[project]
name = "lab1"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipython (>=9.6.0,<10.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "xgboost (>=3.0.5,<4.0.0)",
    "graphviz (>=0.21,<0.22)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "plotly (>=6.4.0,<7.0.0)",
    "optuna (>=4.5.0,<5.0.0)",
    "anywidget (>=0.9.18,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.1.0,<8.0.0)"
]
